--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body {
   width: 100%;
   height: 100%;
   background-color: hsl(277, 64%, 61%);
-  opacity: 0.5;
+  /* opacity: 0.5; */
 }
 .image {
   background-image: url(./images/image-header-mobile.jpg);
