--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ body {
   height: 100%;
   background-color: hsl(277, 64%, 61%);
   /* opacity: 0.5; */
+  border-radius: inherit;
 }
 .image {
   background-image: url(./images/image-header-mobile.jpg);
